--- a/Youtube_Streaming_API.ipynb
+++ b/Youtube_Streaming_API.ipynb
@@ -19,7 +19,7 @@
       },
       "outputs": [],
       "source": [
-        "api_key = 'AIzaSyA28iL5XBSABmpipIKqewrdGn0AvkMF77s'"
+        "api_key = ''# add api key here"
       ]
     },
     {
